# devel-blender

./: .config  .gitignore  .gitlab-ci.yml  Common.mk  Common.mk.orig  Kconfig  Kconfig.orig  Makefile.am  Makefile.am.orig  README.md  README.md.orig  bootstrap  bootstrap.orig  configure.ac  configure.ac.orig  configure~  devel-blender.files  devel-blender.includes  dshell
conf/ide/qtcreator/QtProject/: QtCreator.db  QtCreator.ini
conf/ide/qtcreator/QtProject/qtcreator/: cmaketools.xml  debuggers.xml  devel-blender.qws  devel-blender.qws.template  devices.xml  helpcollection.qhc  profiles.xml  qtversion.xml  toolchains.xml
conf/ide/qtcreator/QtProject/qtcreator/qnx/: qnxconfigurations.xml
docker/: Dockerfile  Makefile.am
ext/: Makefile.am  Makefile.am.orig
src/: Makefile.am
src/nodejs/: Makefile.am
